--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
