--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
     "notistack": "^2.0.3",
